# dmighty007

./: Dockerfile  Makefile  README.md  Untitled.ipynb  entrypoint.sh  main.py  manager_github.py  pyproject.toml  requirements.txt
.github/workflows/: waka-readme.yml  waka.yml
sources/: manager_github.py
