
[tool.poetry]
name = "waka-readme"
version = "0.1.6"
description = "Wakatime Weekly Metrics on your Profile Readme."
authors = ["Athul Cyriac Ajay <athul8720@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
PyGithub = "^1.58"
Faker = "^13.15.1"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.2"
pylint = "^2.14.5"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"